--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ add_library(laser_scan_filters
   src/median_filter.cpp
   src/array_filter.cpp
   src/box_filter.cpp
+  src/box_utils.cpp
   src/polygon_filter.cpp
   src/polygon_utils.cpp
   src/speckle_filter.cpp
