Represent a box shape with a string instead of 6 double-s

--- a/examples/box_filter.yaml
+++ b/examples/box_filter.yaml
@@ -3,10 +3,5 @@ scan_filter_chain:
   type: laser_filters/LaserScanBoxFilter
   params:
     box_frame: base_link
-    max_x: 0.39
-    max_y: 0.34
-    max_z: 0.3
-    min_x: -0.45
-    min_y: -0.34
-    min_z: -0.28
+    box: [[0.0, 0.0, 0.0], [1.0, 1.0, 1.0]]
     invert: false
