[multi_box_filter] Support multiple boxes

--- a/cfg/BoxFilter.cfg
+++ b/cfg/BoxFilter.cfg
@@ -38,8 +38,8 @@ PACKAGE = "laser_filters"
 
 gen = ParameterGenerator()
 
-gen.add("box", str_t, 0,
-        "A list of coordinates that represents a box in the format [ [xmin, ymin, zmin], [xmax, ymax, zmax] ]", "[]")
+gen.add("box_array", str_t, 0,
+        "A nested list of coordinates that represents a box array in the format [ [ [xmin1, ymin1, zmin1], [xmax1, ymax1, zmax1] ], [ [xmin1, ymin1, zmin1], [xmax1, ymax1, zmax1] ], ...]", "[]")
 gen.add("box_padding", double_t, 0, "Box padding in meters", 0, 0, 100.)
 gen.add("invert", bool_t, 0, "A Boolean to invert the filter", False)
 
